# lazarus

./: .gitignore  README.md  main.py  pyproject.toml
src/lazarus/: __init__.py  cli.py  python_worker.py
